--- a/ldcfood_contact.html
+++ b/ldcfood_contact.html
@@ -39,7 +39,7 @@
                         <li><a href="#">Nos Marques</a></li>
                         <li><a href="#">Nos Gammes</a></li>
                         <li><a href="#">Estampille CE</a></li>
-                        <li class="current-menu-item"><a href="#">Nos Engagements</a></li>
+                        <li><a href="#">Nos Engagements</a></li>
                         <li><a href="#" class="btn btn-contact">Contact</a></li>
                     </ul>
                 </div>
@@ -62,12 +62,12 @@
                         <form action="#">
                             <ul class="radio-box">
                                 <li>
-                                    <input type="radio" id="r-option-1" name="radio-option">
+                                    <input type="radio" id="r-option-1" name="r-option">
                                     <label for="r-option-1">Mr</label>
                                     <div class="check"></div>
                                 </li>
                                 <li>
-                                    <input type="radio" id="r-option-2" name="radio-option">
+                                    <input type="radio" id="r-option-2" name="r-option">
                                     <label for="r-option-2">Mme</label>
                                     <div class="check"></div>
                                 </li>
@@ -96,7 +96,7 @@
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
-                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse Poulet">
+                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
@@ -241,6 +241,7 @@
             </div>
         </div>
     </footer>
+    <!--popup-contact for success sent message. call after add ".form-sent-success" class to body tag -->
     <div class="popup-contact">
         <div class="popup-decor">
             <i class="icon-right"></i>
