--- a/ldcfood_engagements.html
+++ b/ldcfood_engagements.html
@@ -36,7 +36,6 @@
                     </div>
                     <ul class="header-nav">
                         <li class="menu-close">&times;</li>
-                        <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
                         <li><a href="#">Nos Gammes</a></li>
                         <li><a href="#">Estampille CE</a></li>
@@ -64,7 +63,7 @@
                         <a href="#section-element-3">Respect de la nature</a>
                     </div>
                     <div class="acc-item">
-                        <a href="#">Le bien-être animal</a>
+                        <a href="#section-element-4">Le bien-être animal</a>
                     </div>
                 </div>
                 <section class="default-section text-image-section">
@@ -113,6 +112,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="section-element" id="section-element-4"></div>
                 </section>
             </div>
         </main>
