--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -242,103 +242,103 @@
                             <h2 class="h2 decoration">POULET</h2>
                             <ul class="products-list">
                                 <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
-                                    <div class="product-link">
+                                    <div class="product-img">
                                         <img src="assets/images/entier.png" alt="entier">
                                     </div>
                                     <span class="item-name">Entier</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
-                                    <div class="product-link">
+                                    <div class="product-img">
                                         <img src="assets/images/filets.png" alt="filets">
                                     </div>
                                     <span class="item-name">Filets</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
-                                    <div class="product-link">
+                                    <div class="product-img">
                                         <img src="assets/images/ailes.png" alt="ailes">
                                     </div>
                                     <span class="item-name">Ailes</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/abats.png" alt="abats">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Abats</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/co-produit.png" alt="co-produit">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Co-produit</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/elabores.png" alt="elabores">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Elabores</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/guisses.png" alt="guisses">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Guisses</span>
                                     <a href="#" class="item-button"></a>   
                                 </li>
                             </ul>
                             <h2 class="h2 decoration">DINDE</h2>
                             <ul class="products-list">
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/entier.png" alt="entier">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Entier</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/filets.png" alt="filets">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Filets</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/ailes.png" alt="ailes">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Ailes</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/abats.png" alt="abats">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Abats</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/co-produit.png" alt="co-produit">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Co-produit</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/elabores.png" alt="elabores">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Elabores</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a href="#" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-img">
                                         <img src="assets/images/guisses.png" alt="guisses">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Guisses</span>
                                     <a href="#" class="item-button"></a>   
                                 </li>
