added some feedbacks

--- a/ldcfood_nosgammes.html
+++ b/ldcfood_nosgammes.html
@@ -103,96 +103,96 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="box-row-wrapper">
-                            <div class="opener"> <i class="icon-i-sertifications"></i><strong>Espèces</strong></div>
-                            <div class="box-row">
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caille"> </i>
-                                        <strong class="title">Caille</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-oie"> </i>
-                                        <strong class="title">Oie</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-jeune-coq"> </i>
-                                        <strong class="title">Jeune Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-canard"> </i>
-                                        <strong class="title">Canard</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-pintade"> </i>
-                                        <strong class="title">Pintade</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dinde"> </i>
-                                        <strong class="title">Dinde</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caneton"> </i>
-                                        <strong class="title">Сaneton</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poulet"> </i>
-                                        <strong class="title">Poulet</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dindon"> </i>
-                                        <strong class="title">Dindon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-chapon"> </i>
-                                        <strong class="title">Chapon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-chevreau"> </i>
-                                        <strong class="title">Chevreau</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poule"> </i>
-                                        <strong class="title">Poule</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-lapin"> </i>
-                                        <strong class="title">Lapin</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-coq"> </i>
-                                        <strong class="title">Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-viandes"> </i>
-                                        <strong class="title">Viandes, légumeset produits laitiers</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
+                             <div class="box-row-wrapper">
+                        <div class="opener"> <i class="icon-i-sertifications"></i><strong>Espèces</strong></div>
+                        <div class="box-row">
+                            <div class="col-body">
+                                <a class="body-box" href="#">
+                                    <i class="icon-caille"> </i>
+                                    <strong class="title">Caille</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-oie"> </i>
+                                    <strong class="title">Oie</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-jeune-coq"> </i>
+                                    <strong class="title">Jeune Coq</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                            </div>
+                            <div class="col-body">
+                                <a class="body-box" href="#">
+                                    <i class="icon-canard"> </i>
+                                    <strong class="title">Canard</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-pintade"> </i>
+                                    <strong class="title">Pintade</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-dinde"> </i>
+                                    <strong class="title">Dinde</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                            </div>
+                            <div class="col-body">
+                                <a class="body-box" href="#">
+                                    <i class="icon-caneton"> </i>
+                                    <strong class="title">Сaneton</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-poulet"> </i>
+                                    <strong class="title">Poulet</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-dindon"> </i>
+                                    <strong class="title">Dindon</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                            </div>
+                            <div class="col-body">
+                                <a class="body-box" href="#">
+                                    <i class="icon-chapon"> </i>
+                                    <strong class="title">Chapon</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-chevreau"> </i>
+                                    <strong class="title">Chevreau</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-poule"> </i>
+                                    <strong class="title">Poule</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                            </div>
+                            <div class="col-body">
+                                <a class="body-box" href="#">
+                                    <i class="icon-lapin"> </i>
+                                    <strong class="title">Lapin</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-coq"> </i>
+                                    <strong class="title">Coq</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
+                                    <i class="icon-viandes"> </i>
+                                    <strong class="title">Viandes, légumeset produits laitiers</strong>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </section>
