--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -59,7 +59,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager1-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.ogv" type="video/ogv">
@@ -80,7 +80,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -101,7 +101,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -122,7 +122,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager3-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -143,7 +143,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager4-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -164,7 +164,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -185,7 +185,7 @@
                     <div>
                         <a class="video-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4" poster="assets/images/abats.png">
@@ -265,89 +265,89 @@
                         <div class="opener"> <i class="icon-i-sertifications"></i><strong>Espèces</strong></div>
                         <div class="box-row">
                             <div class="col-body">
-                                <div class="body-box">
+                                <a class="body-box" href="#">
                                     <i class="icon-caille"> </i>
                                     <strong class="title">Caille</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-oie"> </i>
                                     <strong class="title">Oie</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-jeune-coq"> </i>
                                     <strong class="title">Jeune Coq</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                             <div class="col-body">
-                                <div class="body-box">
+                                <a class="body-box" href="#">
                                     <i class="icon-canard"> </i>
                                     <strong class="title">Canard</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-pintade"> </i>
                                     <strong class="title">Pintade</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-dinde"> </i>
                                     <strong class="title">Dinde</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                             <div class="col-body">
-                                <div class="body-box">
+                                <a class="body-box" href="#">
                                     <i class="icon-caneton"> </i>
                                     <strong class="title">Сaneton</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-poulet"> </i>
                                     <strong class="title">Poulet</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-dindon"> </i>
                                     <strong class="title">Dindon</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                             <div class="col-body">
-                                <div class="body-box">
+                                <a class="body-box" href="#">
                                     <i class="icon-chapon"> </i>
                                     <strong class="title">Chapon</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-chevreau"> </i>
                                     <strong class="title">Chevreau</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-poule"> </i>
                                     <strong class="title">Poule</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                             <div class="col-body">
-                                <div class="body-box">
+                                <a class="body-box" href="#">
                                     <i class="icon-lapin"> </i>
                                     <strong class="title">Lapin</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-coq"> </i>
                                     <strong class="title">Coq</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
-                                <div class="body-box">
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
+                                <a class="body-box" href="#">
                                     <i class="icon-viandes"> </i>
                                     <strong class="title">Viandes, légumeset produits laitiers</strong>
-                                    <a href="#" class="btn btn-thin">Découvrir</a>
-                                </div>
+                                    <span class="btn btn-thin">Découvrir</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                             <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"> </div>
                         </div>
                     </div>
-  <div>
+                    <div>
                         <div class="text-image-holder">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
@@ -376,7 +376,7 @@
                             <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"> </div>
                         </div>
                     </div>
-                      <div>
+                    <div>
                         <div class="text-image-holder">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
@@ -399,7 +399,7 @@
                             <input type="text" required class="inpt-controll" placeholder="Rechercher...">
                         </form>
                     </div>
-                 <div class="img-holder parallax" style="background-image: url(assets/images/parallax2.jpg)"> </div>
+                    <div class="img-holder parallax" style="background-image: url(assets/images/parallax2.jpg)"> </div>
                 </div>
             </div>
         </section>
@@ -611,7 +611,7 @@
                     <div class="contact-links">
                         <a href="#" class="video-link">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false">
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -630,7 +630,7 @@
                         </a>
                         <a href="#" class="video-link">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false">
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -649,7 +649,7 @@
                         </a>
                         <a href="#" class="video-link">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false">
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -668,7 +668,7 @@
                         </a>
                         <a href="#" class="video-link">
                             <div class="video-box">
-                                <video preload="auto" autoplay>
+                                <video preload="auto" autoplay="false">
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
                                     <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
@@ -727,7 +727,7 @@
     </footer>
     <div id="banner-video-poopup" class="hide-content">
         <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
+            <source src="http://download.blender.org/peach/trailer/trailer_400p.ogg" type="video/ogg">
         </video>
     </div>
     <div id="manager1-video" class="hide-content">
@@ -737,22 +737,22 @@
     </div>
     <div id="manager2-video" class="hide-content">
         <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
+            <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
         </video>
     </div>
     <div id="manager3-video" class="hide-content">
         <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
+            <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
         </video>
     </div>
     <div id="manager4-video" class="hide-content">
         <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
+            <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
         </video>
     </div>
     <div id="manager5-video" class="hide-content">
         <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
+            <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
         </video>
     </div>
     <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
