added fixes 1-13 point

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -20,7 +20,7 @@
         <header id="header" class="bg-transparent">
             <div class="container">
                 <div class="header-wrapper">
-                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" height="257"  alt="L.D.C. FOODS"></a>
                     <span class="menu-opener">
                         <i class="burger"></i>
                     </span>
@@ -188,7 +188,7 @@
                                 <video preload="auto" autoplay="false" muted>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
-                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4" poster="assets/images/abats.png">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4" >
                                     <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
                                 </video>
                             </div>
@@ -395,8 +395,8 @@
                     <div class="text-holder">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                         <form action="#" class="search-form">
-                            <button class="btn btn-search"><i class="icon-search"></i></button>
                             <input type="text" required class="inpt-controll" placeholder="Rechercher...">
+                            <button class="btn btn-search"><i class="icon-search"></i></button>
                         </form>
                     </div>
                     <div class="img-holder parallax" style="background-image: url(assets/images/parallax2.jpg)"> </div>
@@ -407,7 +407,7 @@
             <div class="container">
                 <h2 class="h2 decoration-center">NOS VALEURS</h2>
                 <div class="thumbs-holder">
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-left">
                         <div class="img-holder">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img1.svg" alt="thumg image description" width="74" height="84">
@@ -417,7 +417,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-bottom">
                         <div class="img-holder bg-white">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img2.svg" alt="thimg image description" width="69" height="69">
@@ -427,7 +427,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-right">
                         <div class="img-holder">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img3.svg" alt="thimg image description" width="70" height="82">
@@ -437,7 +437,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-left">
                         <div class="img-holder">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img1.svg" alt="thimg image description" width="74" height="84">
@@ -447,7 +447,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-bottom">
                         <div class="img-holder bg-white">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img2.svg" alt="thimg image description" width="69" height="69">
@@ -457,7 +457,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
-                    <div class="circle-thumb">
+                    <div class="circle-thumb sr-right">
                         <div class="img-holder">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
                             <img src="assets/images/thumb-img3.svg" alt="thimg image description" width="70" height="82">
@@ -603,7 +603,7 @@
         <div class="container">
             <div class="top-row">
                 <div class="logo-holder">
-                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" height="257"  alt="L.D.C. FOODS"></a>
                     <span class="copy"><a href="#">LDC Food</a> © 2017 <br> Mentions légales</span>
                 </div>
                 <div class="contact-row">
@@ -705,7 +705,7 @@
                     <div class="info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                         <form action="#" class="subscribe-form">
-                            <input type="emil" required placeholder="S’inscrire à la newsletter">
+                            <input type="email" required placeholder="S’inscrire à la newsletter">
                             <button>ok</button>
                         </form>
                     </div>
