--- a/ldcfood_nosmarques.html
+++ b/ldcfood_nosmarques.html
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="top-row">
                 <div class="logo-holder">
-                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" height="257"  alt="L.D.C. FOODS"></a>
                     <span class="copy"><a href="#">LDC Food</a> © 2017 <br> Mentions légales</span>
                 </div>
                 <div class="contact-row">
@@ -332,7 +332,7 @@
                     <div class="info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                         <form action="#" class="subscribe-form">
-                            <input type="emil" required placeholder="S’inscrire à la newsletter">
+                            <input type="email" required placeholder="S’inscrire à la newsletter">
                             <button>ok</button>
                         </form>
                     </div>
