fix bugs from klient

--- a/ldcfood_contact.html
+++ b/ldcfood_contact.html
@@ -92,15 +92,15 @@
                             </div>
                             <ul class="favoris-list">
                                 <li>
-                                    <input type="text" class="favoris-option" value="Poulet - cuisse entière">
+                                    <input type="text" class="favoris-option width-dynamic" value="PoulePouletPouletPoulett - cuisse entière">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
-                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse">
+                                    <input type="text" class="favoris-option width-dynamic" value="Poulet - Haut de cuisse">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
-                                    <input type="text" class="favoris-option" value="Cuisse s/peau">
+                                    <input type="text" class="favoris-option width-dynamic" value="Cuisse s/peau">
                                     <span class="del-btn"></span>
                                 </li>
                             </ul>
